# hello

./: CMakeLists.txt
cmake/: helloConfig.cmake.in
docs/: README.md
plugins/: CommonIssues.hpp  HelloName.cpp  HelloName.hpp  HelloToYou.cpp  HelloToYou.hpp  NameReceiver.cpp  NameReceiver.hpp  StringWrapper.hpp
python/hello/: __init__.py  helloapp_gen.py
schema/hello/: confgen.jsonnet  hellonameinfo.jsonnet  hellotoyouinfo.jsonnet  namereceiver.jsonnet  namereceiverinfo.jsonnet
scripts/: hello_example_config.json  hello_gen
